cart page was implemented

--- a/src/app/site-layout/footer/footer.component.html
+++ b/src/app/site-layout/footer/footer.component.html
@@ -12,7 +12,7 @@
                                     height=""
                                     alt=""
                                 />
-                            <p class="mb-3 pb-3">SPORTS es una tienda de indumentaria deportiva con una amplia variedad de diseños en donde podrás encontrar todo lo que necesites para poder realizar deporte con un excelente equipamiento.</p>
+                            <p class="mb-3 pb-3">MAKI SUSHI es un restaurante de sushi ubicado en la provincia de Tucumán que cuenta con una amplia variedad de productos de muy buena calidad y tambien con los mejores precios del mercado.</p>
                             </div>
                         </div>
                         <div class="footer-middle-col col-lg-3 col-md-6 mb-2 mb-md-0">
@@ -43,8 +43,8 @@
                         </div>
                         <div class="footer-end-col col-lg-3 col-md-6 mb-4 mb-md-0">
                             <h5 class="text-uppercase mb-4 fw-bold text-light">Horarios de atención</h5>
-                                <p class="mb-2">Lunes a Viernes de 9:00 a 18:00</p>
-                                <p class="mb-2">Sabados de 9:00 a 16:00</p>
+                                <p class="mb-2">Lunes a Viernes de 12hs a 00hs</p>
+                                <p class="mb-2">Sabados de 12hs a 02hs</p>
                             <h5 class="text-uppercase pt-4 mt-4 mb-3 fw-bold text-light">Centro de atención al cliente</h5>
                                 <p class="mb-2">Email: LaMarca@gmail.com</p>
                                 <p class="mb-2">Tel: 3815xxxxxx</p>
