--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -64,7 +64,7 @@
             <a class="nav-link nav-user-img" routerLink="/main">
               <span class="add-product">Home</span>
             </a>
-            <a class="nav-link nav-user-img" routerLink="/user-auth">
+            <a class="nav-link nav-user-img" routerLink="/cart-list">
               <span class="cart-container">
                 <fa-icon class="cart-icon" [icon]="cartIcon"></fa-icon>
                 ({{ cartProducts }})
