Adding and deleting some comments

--- a/src/app/admin-auth/pages/user-auth/user-auth.component.html
+++ b/src/app/admin-auth/pages/user-auth/user-auth.component.html
@@ -1,4 +1,5 @@
 <div class="user-auth">
+  <!-- Registro -->
   <div *ngIf="!showLogin" class="signup">
     <h1>Registro de usuario</h1>
     <form
