--- a/src/app/products/pages/product-details/product-details.component.html
+++ b/src/app/products/pages/product-details/product-details.component.html
@@ -16,7 +16,7 @@
             <div>
                 <p>{{ productData.description }}</p>
             </div>
-            <div *ngIf="showCartOptions" class="cart-options">
+            <div class="cart-options">
 
                 <div class="cart-order">
                     <button (click)="Quantity('min')">-</button>
