--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -124,8 +124,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link item text-decoration-none" routerLink="/main">
-            <p>SUCURSALES</p>
+          <a class="nav-link nav-user-img" routerLink="/cart-list">
+              <p>CARRITO</p>              
           </a>
         </li>
         <li class="nav-item">
@@ -170,8 +170,8 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link item text-decoration-none" routerLink="/main">
-                <p>SUCURSALES</p>
+              <a class="nav-link nav-user-img" routerLink="/cart-list">
+                  <p>CARRITO</p>              
               </a>
             </li>
             <li class="nav-item">
