my order page was added to the project

--- a/src/app/cart/pages/cart/cart.component.html
+++ b/src/app/cart/pages/cart/cart.component.html
@@ -13,7 +13,7 @@
                     <span>Cantidad: {{cart['quantity']}}</span>
                 </li>
                 <li>
-                    <span>Precio: {{cart['price']}}</span>
+                    <span>Precio: ${{cart['price']}}</span>
                 </li>
                 <li>
                     <button class="form-button add-to-cart" (click)="removeToCart(cart['id'])">Eliminar del carrito</button>
