--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -119,13 +119,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link item text-decoration-none" routerLink="/main">
-            <p>PROMOCIONES</p>
+          <a class="nav-link nav-user-img" routerLink="/cart-list">
+            <p>CARRITO</p>              
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-user-img" routerLink="/cart-list">
-              <p>CARRITO</p>              
+          <a class="nav-link item text-decoration-none" routerLink="/user-order-list">
+            <p>MIS COMPRAS</p>
           </a>
         </li>
         <li class="nav-item">
@@ -165,13 +165,13 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link item text-decoration-none" routerLink="/main">
-                <p>PROMOCIONES</p>
+              <a class="nav-link nav-user-img" routerLink="/cart-list">
+                  <p>CARRITO</p>              
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link nav-user-img" routerLink="/cart-list">
-                  <p>CARRITO</p>              
+              <a class="nav-link item text-decoration-none" routerLink="/user-order-list">
+                <p>MIS COMPRAS</p>
               </a>
             </li>
             <li class="nav-item">
