--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -129,8 +129,8 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link item text-decoration-none" routerLink="/main">
-            <p>CONTACTO</p>
+          <a class="nav-link item text-decoration-none" routerLink="/user-favs-list">
+            <p>MIS FAVORITOS</p>
           </a>
         </li>
       </ul>
@@ -175,8 +175,8 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link item text-decoration-none" routerLink="/main">
-                <p>CONTACTO</p>
+              <a class="nav-link item text-decoration-none" routerLink="/user-favs-list">
+                <p>MIS FAVORITOS</p>
               </a>
             </li>
           </ul>
