--- a/src/app/cart/pages/cart/cart.component.html
+++ b/src/app/cart/pages/cart/cart.component.html
@@ -1,6 +1,9 @@
 <div class="cart-page">
     <h1 class="text-center">Carrito de Compras</h1>
     <div class="row p-3 container-fluid">
+        <div>
+            <h1>{{EmptyCartMessage}}</h1>
+        </div>
         <div class="details">
             <ul *ngFor="let cart of cartData" class="d-flex justify-content-between align-items-center">
                 <li>
