some conditional messages were added

--- a/src/app/user-favs/pages/user-favs.component.css
+++ b/src/app/user-favs/pages/user-favs.component.css
@@ -24,8 +24,14 @@
     font-size: 30px;
 }
 
-.add-to-cart {
+.add-to-favs {
     background-color: #EF8F18;
     border-radius: 3px;
     border: 1px solid black;
+}
+
+.login-link {
+    color: #EF8F18;
+    text-decoration: none;
+    font-weight: bold;
 }
