--- a/src/app/cart/pages/cart/cart.component.html
+++ b/src/app/cart/pages/cart/cart.component.html
@@ -1,10 +1,10 @@
 <div class="cart-page">
     <h1 class="text-center">Carrito de Compras</h1>
     <div class="row p-3 container-fluid">
-        <div>
-            <h1>{{EmptyCartMessage}}</h1>
+        <div *ngIf="EmptyCartMessage" class="d-flex justify-content-center">
+            <span>No tiene items en su carrito</span>
         </div>
-        <div class="details">
+        <div *ngIf="!EmptyCartMessage" class="details">
             <ul *ngFor="let cart of cartData" class="d-flex justify-content-between align-items-center">
                 <li>
                     <img src="{{cart['image']}}" alt="">
@@ -22,11 +22,12 @@
                     <button class="form-button add-to-cart" (click)="removeToCart(cart['id'])">Eliminar del carrito</button>
                 </li>
             </ul>
+            <p>{{emptyCartData}}</p>
         </div>
-        <div class="summary d-flex justify-content-center align-items-center">
+        <div *ngIf="!EmptyCartMessage"  class="summary d-flex justify-content-center align-items-center">
             <p class="float-start me-2 fw-bold">Total a pagar: <p>${{totalPrice.price}}</p><p>
         </div>
-        <div class="text-center mt-2">
+        <div *ngIf="!EmptyCartMessage"  class="text-center mt-2">
             <Button class="form-button add-to-cart" (click)="purchase()">Realizar Compra</Button>
             <p class="p-message">{{ purchaseErrorMessage }}</p>
             <p class="p-message">{{ successfulPurchaseMessage }}</p>
