--- a/src/app/user-orders/pages/user-orders.component.html
+++ b/src/app/user-orders/pages/user-orders.component.html
@@ -1,6 +1,6 @@
 <div class="cart-page">
     <h1 class="text-center">Mis compras</h1>
-    <div class="row p-3 container-fluid">
+    <div *ngIf="userLogged" class="row p-3 container-fluid">
         <div class="details">
             <ul *ngFor="let cart of cartData2" class="d-flex justify-content-between align-items-center">
             <!-- <ul class="d-flex justify-content-between align-items-center"> -->
@@ -20,6 +20,11 @@
                     <span>{{cart.actualDate}}</span>
                 </li>
             </ul>
+        </div>
+    </div>
+    <div *ngIf="!userLogged"  class="row p-3 container-fluid">
+        <div class="d-flex justify-content-center align-items-center text-center">
+            <p>Logueate haciendo click <a class="login-link" routerLink="/user-auth">aquí</a>  para poder ver tus compras realizadas</p>
         </div>
     </div>
 </div>
