--- a/src/app/cart/pages/cart/cart.component.html
+++ b/src/app/cart/pages/cart/cart.component.html
@@ -2,7 +2,7 @@
     <h1 class="text-center">Carrito de Compras</h1>
     <div class="row p-3 container-fluid">
         <div *ngIf="EmptyCartMessage" class="d-flex justify-content-center">
-            <span>No tiene items en su carrito</span>
+            <span>No tiene productos en su carrito</span>
         </div>
         <div *ngIf="!EmptyCartMessage" class="details">
             <ul *ngFor="let cart of cartData" class="d-flex justify-content-between align-items-center">
