--- a/src/app/products/pages/product-list/product-list.component.css
+++ b/src/app/products/pages/product-list/product-list.component.css
@@ -67,3 +67,49 @@
     max-width: 100%;
     height: 225px;
 }
+
+.list{
+    margin: 0px 0px 20px 20px;
+}
+
+.item:hover{
+    cursor: pointer;
+    font-weight: bold;
+}
+
+/* CSS */
+.button-16 {
+  background-color: #f5a748;
+  border: 1px solid #f5a748;
+  border-radius: 3px;
+  color: black;
+  cursor: pointer;
+  font-family: arial,sans-serif;
+  font-size: 14px;
+  height: 36px;
+  line-height: 27px;
+  min-width: 54px;
+  padding: 0 16px;
+  margin: 15px 20px 0px 20px;
+  text-align: center;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: pre;
+}
+
+.button-16:hover {
+    background-color: #EF8F18;
+  border-color: black;
+  box-shadow: rgba(0, 0, 0, .1) 0 1px 1px;
+  color: black;
+}
+
+.button-16:focus {
+  border-color: #4285f4;
+  outline: none;
+}
+
+.down-icon{
+    margin-left: 20px;
+}
