--- a/src/app/site-layout/sidebar/sidebar.component.html
+++ b/src/app/site-layout/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <h1 class="my-4">ASD 123</h1>
 <div class="list-group">
-    <a class="list-group-item" href="">Category 1</a>
+    <a class="list-group-item" href="" (click)="hola()">Category 1</a>
     <a class="list-group-item" href="">Category 2</a>
     <a class="list-group-item" href="">Category 3</a>
 </div>
