--- a/src/app/admin-auth/pages/admin-add-product/admin-add-product.component.css
+++ b/src/app/admin-auth/pages/admin-add-product/admin-add-product.component.css
@@ -23,6 +23,14 @@ h1{
     height: 100px;
 }
 
+.ingredient-col{
+    flex: 1;
+}
+
+.ingredient-option{
+    margin-right: 10px;
+}
+
 @media (min-width: 576px) {
     .form-input{
         font-size: 18px ;
