--- a/src/app/products/pages/product-list/product-list.component.html
+++ b/src/app/products/pages/product-list/product-list.component.html
@@ -1,7 +1,10 @@
 <h1 class="my-4">Menú</h1>
 <div class="container-fluid row">
-    <div class="col-lg-3">
 
+<!-- PRODUCT FILTERS -->
+
+    <div class="col-lg-3">
+<!-- ALL PRODUCTS -->
       <div>
         <button
           type="button"
@@ -11,6 +14,8 @@
           <span>Mostrar todos los productos</span>
         </button>
       </div>
+
+<!-- FILTER BY PRICE -->
 
       <div>
         <button
@@ -27,7 +32,13 @@
       
       <div class="container-fluid">
         <div #collapse="ngbCollapse" [(ngbCollapse)]="priceCollapsed">
-          <ul
+          <input type="checkbox" [(ngModel)]="showPrice1" > Menor a 300<br>
+          <input type="checkbox" [(ngModel)]="showPrice2" > $300-$400<br>
+          <input type="checkbox" [(ngModel)]="showPrice3" > $400 - $500<br>
+          <input type="checkbox" [(ngModel)]="showPrice4" > $500 - $600<br>
+          <input type="checkbox" [(ngModel)]="showPrice5" > Mayor a $600<br>
+          
+         <!--  <ul
             class="list container-fluid navbar-nav mr-auto d-flex justify-content-between"
           >
             <li class="nav-item">
@@ -55,9 +66,11 @@
                 <p class="item">Mayor a $600</p>
               </a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
+
+<!-- FILTER BY INGREDIENTS -->
 
       <div >
         <button
@@ -74,7 +87,22 @@
       
       <div class="container-fluid">
         <div #collapse="ngbCollapse" [(ngbCollapse)]="ingredientCollapsed">
-          <ul
+          <input type="checkbox" [(ngModel)]="showPalta" > Palta<br>
+          <input type="checkbox" [(ngModel)]="showSalmon" > Salmón<br>
+          <input type="checkbox" [(ngModel)]="showPhiladelphia" > Philadelphia<br>
+          <input type="checkbox" [(ngModel)]="showSalsaDeSoja" > Salsa de Soja<br>
+          <input type="checkbox" [(ngModel)]="showZanahoria" > Zanahoria<br>
+          <input type="checkbox" [(ngModel)]="showMorron" > Morron<br>
+          <input type="checkbox" [(ngModel)]="showZapallito" > Zapallito<br>
+          <input type="checkbox" [(ngModel)]="showCebolla" > Cebolla<br>
+          <input type="checkbox" [(ngModel)]="showBrotesDeSoja" > Brotes de Soja<br>
+          <input type="checkbox" [(ngModel)]="showPollo" > Pollo<br>
+          <input type="checkbox" [(ngModel)]="showPepino" > Pepino<br>
+          <input type="checkbox" [(ngModel)]="showLechuga" > Lechuga<br>
+          <input type="checkbox" [(ngModel)]="showRucula" > Rucula<br>
+          <input type="checkbox" [(ngModel)]="showTomates" > Tomates<br>
+          <input type="checkbox" [(ngModel)]="showMayonesa" > Mayonesa<br>
+          <!-- <ul
             class="list container-fluid navbar-nav mr-auto d-flex justify-content-between"
           >
             <li class="nav-item">
@@ -152,66 +180,22 @@
                 <p class="item">Mayonesa</p>
               </a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
-        <!-- <div class="list-group">
-          <button class="list-group-item" (click)="allPrices()">Mostrar todos los productos</button> -->
-            <!-- <ul>Precios
-             <li><button class="list-group-item" (click)="price1()">Menor a $300</button></li>
-             <li><button class="list-group-item" (click)="price2()">$300-$400</button></li>
-             <li><button class="list-group-item" (click)="price3()">$400 - $500</button></li>
-             <li><button class="list-group-item" (click)="price4()">$500 - $600</button></li>
-             <li><button class="list-group-item" (click)="price5()">Mayor a 600$</button></li>
-          </ul> -->
-          <!-- <ul>Precios
-             <li><button class="list-group-item" (click)="price(0, 300)">Menor a $300</button></li>
-             <li><button class="list-group-item" (click)="price(300, 400)">$300-$400</button></li>
-             <li><button class="list-group-item" (click)="price(400, 500)">$400 - $500</button></li>
-             <li><button class="list-group-item" (click)="price(500, 600)">$500 - $600</button></li>
-             <li><button class="list-group-item" (click)="price(600, 1000)">Mayor a 600$</button></li>
-          </ul>
-        </div>
-        <div class="list-group">   -->        
-            <!-- <ul>Ingredientes
-             <li><button class="list-group-item" (click)="ingredient1()">Palta</button></li>
-             <li><button class="list-group-item" (click)="ingredient2()">Salmón</button></li>
-             <li><button class="list-group-item" (click)="ingredient3()">Philadelphia</button></li>
-             <li><button class="list-group-item" (click)="ingredient4()">Salsa de Soja</button></li>
-             <li><button class="list-group-item" (click)="ingredient5()">Zanahoria</button></li>
-             <li><button class="list-group-item" (click)="ingredient6()">Morron</button></li>
-             <li><button class="list-group-item" (click)="ingredient7()">Zapallito</button></li>
-             <li><button class="list-group-item" (click)="ingredient8()">Cebolla</button></li>
-             <li><button class="list-group-item" (click)="ingredient9()">Brotes de Soja</button></li>
-             <li><button class="list-group-item" (click)="ingredient10()">Pollo</button></li>
-             <li><button class="list-group-item" (click)="ingredient11()">Pepino</button></li>
-             <li><button class="list-group-item" (click)="ingredient12()">Lechuga</button></li>
-             <li><button class="list-group-item" (click)="ingredient13()">Rucula</button></li>
-             <li><button class="list-group-item" (click)="ingredient14()">Tomates</button></li>
-             <li><button class="list-group-item" (click)="ingredient15()">Mayonesa</button></li>
-          </ul> -->
-          <!-- <ul>Ingredientes
-            <li><button class="list-group-item" (click)="ingredient('Palta')">Palta</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Salmón')">Salmón</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Philadelphia')">Philadelphia</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Salsa de Soja')">Salsa de Soja</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Zanahoria')">Zanahoria</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Morron')">Morron</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Zapallito')">Zapallito</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Cebolla')">Cebolla</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Brotes de Soja')">Brotes de Soja</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Pollo')">Pollo</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Pepino')">Pepino</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Lechuga')">Lechuga</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Rucula')">Rucula</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Tomates')">Tomates</button></li>
-            <li><button class="list-group-item" (click)="ingredient('Mayonesa')">Mayonesa</button></li>
-         </ul>
-        </div> -->
+      <div class="d-flex justify-content-center">
+        <button class="button-16 d-flex align-items-center" (click)="filterAll()">Filtrar</button>
+      </div>        
     </div>
+    
+
+    <!-- PRODUCT LIST -->
+
     <div class="col-lg-9">
+      <p *ngIf="notResultFound">No se encontraron resultados</p>
         <div class="cards-container row row-cols-1 row-cols-md-3 g-4">
-            <div class="col" *ngFor="let item of products">
+            <div class="col" *ngFor="let item of filteredProducts">
+              <!-- <div class="col" *ngFor="let item of products"> -->
               <div class="card">
                 <img src="{{ item.image }}" class="card-img-top"
                   alt="Hollywood Sign on The Hill" />
