--- a/src/app/site-layout/header/header.component.html
+++ b/src/app/site-layout/header/header.component.html
@@ -103,9 +103,69 @@
           </div>
         </form>
       </div>
-      <div class="container-fluid d-none d-sm-none d-md-block">
+
+      
+      <div class="container-fluid d-none d-sm-none d-md-block" [ngSwitch]="menuType">
+
         <ul
-        class="container-fluid navbar-nav mr-auto d-flex justify-content-between"
+        class="container-fluid navbar-nav mr-auto d-flex justify-content-between" *ngSwitchCase="'default'"
+      >
+        <li class="nav-item">
+          <a href=""></a>
+          <a class="nav-link item text-decoration-none" routerLink="/main">
+            <p class="font-weight-bold">HOME</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link item text-decoration-none" routerLink="/product-list">
+            <p>MENÚ</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link nav-user-img" routerLink="/cart-list">
+            <p>CARRITO</p>              
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link item text-decoration-none" routerLink="/user-order-list">
+            <p>MIS COMPRAS</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link item text-decoration-none" routerLink="/user-favs-list">
+            <p>MIS FAVORITOS</p>
+          </a>
+        </li>
+      </ul>
+
+        <ul
+        class="container-fluid navbar-nav mr-auto d-flex justify-content-between" *ngSwitchCase="'admin'"
+      >
+        <li class="nav-item">
+          <a href=""></a>
+          <a class="nav-link item text-decoration-none" routerLink="/main">
+            <p class="font-weight-bold">HOME</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link item text-decoration-none" routerLink="/product-list">
+            <p>MENÚ</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link item text-decoration-none" routerLink="/user-order-list">
+            <p>COMPRAS</p>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link item text-decoration-none" routerLink="/user-favs-list">
+            <p>FAVORITOS</p>
+          </a>
+        </li>
+      </ul>
+
+      <ul
+        class="container-fluid navbar-nav mr-auto d-flex justify-content-between" *ngSwitchCase="'user'"
       >
         <li class="nav-item">
           <a href=""></a>
@@ -136,6 +196,8 @@
       </ul>
       </div>
 
+
+
       <div>
         <button
           type="button"
@@ -149,9 +211,37 @@
       </div>
 
       <div class="container-fluid d-block d-sm-block d-md-none">
-        <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed">
+        <div #collapse="ngbCollapse" [(ngbCollapse)]="isCollapsed" [ngSwitch]="menuType">
           <ul
             class="container-fluid navbar-nav mr-auto d-flex justify-content-between"
+            *ngSwitchCase="'admin'"
+          >
+            <li class="nav-item">
+              <a href=""></a>
+              <a class="nav-link item text-decoration-none" routerLink="/main">
+                <p class="font-weight-bold">HOME</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link item text-decoration-none" routerLink="/product-list">
+                <p>MENÚ</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link item text-decoration-none" routerLink="/user-order-list">
+                <p>COMPRAS</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link item text-decoration-none" routerLink="/user-favs-list">
+                <p>FAVORITOS</p>
+              </a>
+            </li>
+          </ul>
+
+          <ul
+            class="container-fluid navbar-nav mr-auto d-flex justify-content-between"
+            *ngSwitchCase="'user'"
           >
             <li class="nav-item">
               <a href=""></a>
