--- a/src/app/user-favs/pages/user-favs.component.html
+++ b/src/app/user-favs/pages/user-favs.component.html
@@ -1,28 +1,49 @@
 <div class="cart-page">
-    <h1 class="text-center">Mis Favoritos</h1>
+    <div [ngSwitch]="titleType">
+        <h1 class="text-center" *ngSwitchCase="'user'">Mis Favoritos</h1>
+        <h1 class="text-center" *ngSwitchCase="'admin'">Favoritos de usuarios</h1>
+    </div>
     <div *ngIf="userLogged" class="row p-3 container-fluid">
         <div *ngIf="EmptyFavsMessage" class="d-flex justify-content-center">
-            <span>No tiene ningun articulo agregado a favoritos</span>
+            <span>No hay ningun articulo agregado a favoritos</span>
         </div>
-        <div class="details">
-            <ul *ngFor="let cart of favsData2" class="d-flex justify-content-between align-items-center">
-                <li>
-                    <img src="{{cart['image']}}" alt="">
-                </li>
-                <li>
-                    <span>Nombre del producto:{{cart['name']}}</span>
-                </li>
-                <li>
-                    <span>Precio: ${{cart['price']}}</span>
-                </li>
-                <li>
-                    <button class="form-button add-to-favs" (click)="removeFromFavs(cart['id'])">Eliminar de Favoritos</button>
-                </li>
-            </ul>
+        <div class="details" [ngSwitch]="adminOrdersList">
+            <div *ngSwitchCase="'default'">
+                <ul *ngFor="let cart of favsData2" class="d-flex justify-content-between align-items-center">
+                    <li>
+                        <img src="{{cart['image']}}" alt="">
+                    </li>
+                    <li>
+                        <span>Nombre del producto:{{cart['name']}}</span>
+                    </li>
+                    <li>
+                        <span>Precio: ${{cart['price']}}</span>
+                    </li>
+                    <li>
+                        <button class="form-button add-to-favs" (click)="removeFromFavs(cart['id'])">Eliminar de Favoritos</button>
+                    </li>
+                </ul>
+            </div>
+            <div *ngSwitchCase="'adminList'">
+                <ul *ngFor="let cart of favsData" class="d-flex justify-content-between align-items-center">
+                    <li>
+                        <img src="{{cart['image']}}" alt="">
+                    </li>
+                    <li>
+                        <span>Nombre del producto:{{cart['name']}}</span>
+                    </li>
+                    <li>
+                        <span>Precio: ${{cart['price']}}</span>
+                    </li>
+                    <li>
+                        <span>Usuario: {{cart['userName']}}</span>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="text-center mt-2">
+<!--         <div class="text-center mt-2">
             <Button *ngIf="!EmptyFavsMessage" class="form-button add-to-favs" (click)="removeAllFavs()">Eliminar todos mis favoritos</Button>
-        </div>
+        </div> -->
     </div>
     <div *ngIf="!userLogged"  class="row p-3 container-fluid">
         <div class="d-flex justify-content-center align-items-center text-center">
