--- a/src/app/user-orders/pages/user-orders.component.html
+++ b/src/app/user-orders/pages/user-orders.component.html
@@ -1,25 +1,58 @@
 <div class="cart-page">
-    <h1 class="text-center">Mis compras</h1>
+    <div [ngSwitch]="titleType">
+        <h1 class="text-center" *ngSwitchCase="'user'">Mis compras</h1>
+        <h1 class="text-center" *ngSwitchCase="'admin'">Compras de usuarios</h1>
+    </div>
+
+
     <div *ngIf="userLogged" class="row p-3 container-fluid">
-        <div class="details">
-            <ul *ngFor="let cart of cartData2" class="d-flex justify-content-between align-items-center">
-            <!-- <ul class="d-flex justify-content-between align-items-center"> -->
-                <li>
-                    <img src="{{cart.image}}" alt="">
-                </li>
-                <li>
-                    <span>Nombre del producto: {{cart.name}}</span>
-                </li>
-                <li>
-                    <span>Cantidad: {{cart.quantity}}</span>
-                </li>
-                <li>
-                    <span>Precio: ${{cart.price}}</span>
-                </li>
-                <li>
-                    <span>{{cart.actualDate}}</span>
-                </li>
-            </ul>
+        <div *ngIf="EmptyCartMessage" class="d-flex justify-content-center">
+            <span>Aun no realizo ninguna compra</span>
+        </div>
+        <div class="details" [ngSwitch]="adminOrdersList">
+            <div *ngSwitchCase="'default'">
+                <ul *ngFor="let cart of cartData2" class="d-flex justify-content-between align-items-center">
+                <!-- <ul class="d-flex justify-content-between align-items-center"> -->
+                    <li>
+                        <img src="{{cart.image}}" alt="">
+                    </li>
+                    <li>
+                        <span>Nombre del producto: {{cart.name}}</span>
+                    </li>
+                    <li>
+                        <span>Cantidad: {{cart.quantity}}</span>
+                    </li>
+                    <li>
+                        <span>Precio: ${{cart.price}}</span>
+                    </li>
+                    <li>
+                        <span>{{cart.actualDate}}</span>
+                    </li>
+                </ul>
+            </div>
+            <div *ngSwitchCase="'adminList'">
+                <ul *ngFor="let cart of cartData" class="d-flex justify-content-between align-items-center">
+                <!-- <ul class="d-flex justify-content-between align-items-center"> -->
+                    <li>
+                        <img src="{{cart.image}}" alt="">
+                    </li>
+                    <li>
+                        <span>Nombre del producto: {{cart.name}}</span>
+                    </li>
+                    <li>
+                        <span>Cantidad: {{cart.quantity}}</span>
+                    </li>
+                    <li>
+                        <span>Precio: ${{cart.price}}</span>
+                    </li>
+                    <li>
+                        <span>Usuario: {{cart.userName}}</span>
+                    </li>
+                    <li>
+                        <span>{{cart.actualDate}}</span>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
     <div *ngIf="!userLogged"  class="row p-3 container-fluid">
